split spring boot main class from controller